--- a/css/main-elements.css
+++ b/css/main-elements.css
@@ -80,7 +80,9 @@ body {
 }
 
 .front-pres-1 {
-    background-image: url(../img/Jaxready-iPhone-multi-appsview.png);
+    /*background-image: url(../img/Jaxready-iPhone-Intropage.png);*/
+    background-image: url(../img/new-iphone-6-5-homeview.jpg);
+
     background-size: cover;
 
 
